--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
+  <script language="javascript" type="text/javascript" src="libraries/p5.sound.min.js"></script>
   <script language="javascript" type="text/javascript" src="Juego.js"></script>
   <script language="javascript" type="text/javascript" src="Linternas.js"></script>
   <script language="javascript" type="text/javascript" src="Obstaculos.js"></script>
   <script language="javascript" type="text/javascript" src="Personaje.js"></script>
-  <script language="javascript" type="text/javascript" src="juegoo.js"></script>
+  <script language="javascript" type="text/javascript" src="imagenesfondo.js"></script>
+  <script language="javascript" type="text/javascript" src="tpfinall.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <style>
